style tweak to fix overlapping of favs

--- a/app/assets/stylesheets/goal.sass
+++ b/app/assets/stylesheets/goal.sass
@@ -33,7 +33,6 @@ ol.goal
   .hint
     font-size: .8rem
     line-height: 1rem
-    margin-top: -5px
     margin-bottom: 0
 
 .big_goal_meta
